# agentic-grant-proposal-builder

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.streamlit/: config.toml  secrets.toml.example
docs/: AI_USAGE_AND_LIMITATIONS.md  ARCHITECTURE.md  CI_ARTIFACTS.md  CLI.md  CLI_EXAMPLES.md  DEMO_WALKTHROUGH.md  DEPENDENCY_SECURITY.md  DOCKER.md  DOCS_INDEX.md  HUMAN_REVIEW_CHECKLIST.md  INTERVIEW_TALK_TRACK.md  PORTFOLIO_REVIEW.md  PUBLICATION_READINESS.md  RELEASE_AUTOMATION.md  RELEASE_CHECKLIST.md  SCENARIOS.md  SCHEMAS.md  STREAMLIT_DEPLOYMENT_CHECKLIST.md
reports/: dependency_audit.json  dependency_audit.md  evaluation_report.md  evaluation_results.json  publication_readiness.json  publication_readiness.md  release_notes_v0.1.0.md  repo_health.json  repo_health.md
scripts/: check_version.py  cli_smoke.py  create_release.py  dependency_audit.py  docker_smoke.py  export_schemas.py  publication_readiness.py  repo_health.py  smoke_streamlit.py
tests/: test_ai_security_docs.py  test_architecture_docs.py  test_changelog_and_release.py  test_ci_artifacts.py  test_cli.py  test_cli_examples.py  test_community_files.py  test_config.py  test_demo_docs.py  test_dependency_security.py  test_docker_assets.py  test_docs_index.py  test_evaluation.py  test_license_and_conduct.py  test_openai_tool_wiring.py  test_openai_workflow.py  test_pipeline.py  test_publication_readiness.py  (+9 more)
(+41 files in other folders)
